<resources>
    <string name="app_name">Canvas</string>
    <string name="sky_not_installed">Open Mod Manager and choose Live/Beta/Huawei. Sky is not installed. You must have Sky installed in order to use this!</string>
    <string name="app_info"><![CDATA[
<strong>Canvas Mod Loader</strong>
<p>
    <strong>Support:</strong>
    <ul>
      <li><a href="https://t.me/+Hc6QeQVTH1JjNjky">English</a></li>
      <li><a href="https://t.me/+mue7BZWmWOxkMDUy">Русский</a></li>
    </ul>
  </p>
  <p>
    <strong>Made by:</strong>
    <ul>
      <li><a href="https://github.com/lukas0x1">Icarus (retired)</a></li>
      <li><a href="https://github.com/artdeell">artDev (retired)</a></li>
    </ul>
  </p>
  <p>
    <strong>Continue updated by:</strong>
    <ul>
        <li><a href="https://github.com/RomanChamelo">Roman</a></li>
        <li><a href="https://github.com/Kiojeen">Kiojeen</a></li>
    </ul>
  </p>
  <p>
    <strong>Banner by:</strong>
    <ul>
      <li>Сон~ (<a href="https://vk.com/son583">VK</a>, <a href="https://t.me/Son040">Telegram</a>)</li>
    </ul>
  </p>
  <p>
    <strong>Icon by:</strong>
    <ul>
      <li>Elias Gabriel (<a href="https://t.me/Eliatshaha">Telegram</a>)</li>
    </ul>
  </p>
  <p>
    <strong>Original game by:</strong>
    <ul>
      <li><a href="https://thatgamecompany.com/">thatgamecompany</a></li>
    </ul>
  </p>
    ]]></string>
    <string name="mod_manager">Mod Manager</string>
    <string name="add_mod">Add mod</string>
    <string name="mod_name">%s (%s)</string>
    <string name="mod_invalid">Invalid mod. Missing dependencies?</string>
    <string name="mod_remove_unable">Unable to remove mod</string>
    <string name="mod_remove_deps">You have mods that depend on this mod, please remove them first!</string>
    <string name="mod_remove_dep">%s depends on the mod you are trying to remove</string>
    <string name="mod_ioe">I/O error</string>
    <string name="mod_gf">General fault</string>
    <string name="mod_add_unable">Unable to add mod</string>
    <string name="mod_add_wrongformat">Mod is not readable</string>
    <string name="mod_add_missingdep">Mod depends on %s %d.%d or newer, but it is not available</string>
    <string name="mod_add_exists">A mod under this name already exists</string>
    <string name="mod_version">%d.%d.%d</string>
    <string name="mod_skip_updater">Skip  the updater</string>
    <string name="sign_in">Sign in with %s</string>
    <string name="enable_beta">Enable Sky Beta support</string>
    <string name="launch">Play</string>
    <string name="enable_dev">Dev Server</string>
    <string name="wait">Wait</string>
    <string name="updater_checking">Checking for updates…</string>
    <string name="updater_update_available">A new update is available!</string>
    <string name="updater_update_downloading">Downloading…</string>
    <string name="updater_update_downloaded">Downloaded successfully!</string>
    <string name="updater_skip">Skip</string>
    <string name="updater_update">Update</string>
    <string name="updater_install">Install</string>
    <string name="updater_retry">Retry</string>
    <string name="updater_failed">Failed to update</string>
    <string name="updater_input_unreadable">Downloaded data not readable</string>
    <string name="mod_canvas_version">Canvas %s</string>
    <string name="huawei">huawei</string>
    <string name="beta">Beta</string>
    <string name="live">Live</string>
    <string name="game_not_installed_warning">Game is not installed</string>
    <string name="play">PLAY</string>
    <string name="mods">MODS</string>
    <string name="check_updates_title">Do you want to check if [%1$s] have an update?</string>
    <string name="check_updates_failed_title">Checking Failed</string>
    <string name="updating_failed_title">"Updating Failed"</string>
    <string name="check_updates_message">Note: Update will start if you feel OK.</string>
    <string name="check_button_text">Check</string>
    <string name="version_info">Version: %s\n%s</string>
    <string name="update_dialog_title">%s Has a new update!!</string>
    <string name="install_button_text">Install</string>
    <string name="updater_busy">Updater is busy</string>
    <string name="download_is_going">Download is going</string>
    <string name="up_to_date_title">UP TO DATE</string>
    <string name="up_to_date_message">Current mod is up to date\nVersion: %1$s</string>
    <string name="remove">Remove</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="switch_skip_updates">Bypass game updates</string>
    <string name="close">Close</string>
    <string name="mod_icon">mod icon</string>
    <string name="no_update_links">No Update Links</string>
    <string name="mod_check_updates_checking">Checking for updates…</string>
    <string name="mod_check_updates_found">Found an update!</string>
    <string name="mod_check_updates_not_found">No updates available.</string>
    <string name="mod_check_updates_downloading">Downloading update…</string>
    <string name="mod_check_updates_installing">Installing update…</string>
    <string name="mod_check_updates_complete">Update complete!</string>
    <string name="mod_check_updates_error">An error has occurred</string>
    <string name="settings_title">Settings</string>
    <string name="home_title_homepage">GitHub Project Homepage</string>
    <string name="home_description_homepage">Star this repositories</string>
    <string name="home_follow_title">Developers</string>
    <string name="home_follow_content">Contact Developers of Canvas</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="loading">Loading</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_mod">Mods</string>
    <string name="home_title">Home</string>
    <string name="mods_title">Mods</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="boot">\n\n\n\nBoot</string>
    <string name="settle_server">Permanent server</string>
    <string name="modify_package">Edit the package name to boot with.</string>
    <string name="allow_gg">Allow using GameGuardian.</string>
    <string name="description_gg">Compatibility issues may occur.</string>
</resources>