<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="git.artdeell.skymodloader.ui.home.HomeViewModel"/>

        <variable
                name="context"
                type="android.content.Context"/>
    </data>


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingTop="56dp"
            android:paddingBottom="48dp"
            app:fitsSystemWindowsInsets="top|bottom"
            tools:layout_marginTop="24dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingTop="16dp">

            <LinearLayout
                    android:animateLayoutChanges="true"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/home_device_wrapper">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/separator"
                        android:orientation="horizontal"
                        android:padding="8dp"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/play"
                            android:textColor="@color/text"
                            android:textSize="15sp"
                            android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/separator"
                        android:orientation="horizontal"
                        android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/mm_launch_live"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:background="@drawable/buttons"
                        android:textColor="@{viewModel.getButtonColor(context,0)}"
                        android:onClick="@{(view) -> viewModel.onButtonClick(view,0)}"
                        android:onLongClick="@{(view) -> viewModel.onDefaultChange(view,0)}"
                        android:text="@string/live"/>

                <Button
                        android:id="@+id/mm_launch_beta"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:background="@drawable/buttons"
                        android:textColor="@{viewModel.getButtonColor(context,1)}"
                        android:onClick="@{(view) -> viewModel.onButtonClick(view,1)}"
                        android:onLongClick="@{(view) -> viewModel.onDefaultChange(view,1)}"
                        android:text="@string/beta"/>

                <Button
                        android:id="@+id/mm_launch_huawei"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:background="@drawable/buttons"
                        android:textColor="@{viewModel.getButtonColor(context,2)}"
                        android:onClick="@{(view) -> viewModel.onButtonClick(view,2)}"
                        android:onLongClick="@{(view) -> viewModel.onDefaultChange(view,2)}"
                        android:text="@string/huawei"/>

            </LinearLayout>

            <include
                layout="@layout/include_home_canvas"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                viewModel="@{viewModel}"/>

            <com.google.android.material.card.MaterialCardView
                    style="@style/Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:focusable="false">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/home_title_homepage"
                            android:textAppearance="@style/AppearanceFoundation.Title" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/home_description_homepage"
                            />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="15dp"
                            android:paddingTop="8dp" >

                        <ImageView
                                android:onClick='@{(view) -> viewModel.onLinkPressed(view,"https://github.com/artdeell/Canvas-Open-Source")}'
                                android:src="@drawable/ic_github"
                                style="@style/WidgetFoundation.Image.Small"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                app:tint="?colorOnSurface"/>

                        <ImageView
                                android:onClick='@{(view) -> viewModel.onLinkPressed(view,"https://t.me/RomanBeta_bot")}'
                                android:src="@drawable/ic_telegram"
                                style="@style/WidgetFoundation.Image.Small"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                app:tint="?colorOnSurface"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    style="@style/Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="16dp"
                    android:focusable="false">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="16dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/home_follow_title"
                            android:textAppearance="@style/AppearanceFoundation.Title" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/home_follow_content"
                             />

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/module_list"
                            android:layout_marginStart="16dp"
                            items="@{viewModel.items}"
                            itemBinding="@{viewModel.itemBinding}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clipToPadding="false"
                            android:orientation="vertical"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            app:fitsSystemWindowsInsets="top|bottom"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_dev" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>